Fixed lint errors

--- a/src/epub/text/solution.xhtml
+++ b/src/epub/text/solution.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="backmatter z3998:non-fiction">
-		<section id="afterword" epub:type="afterword">
+		<section id="solution" epub:type="afterword">
 			<h2 epub:type="title">Solution to the Crossword in Uncle Mealager’s Will</h2>
 		</section>
 	</body>
