--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -6,8 +6,8 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2 epub:type="title">The Fascinating Problem of Uncle Meleager’s Will</h2>
 		<article id="the-fascinating-problem-of-uncle-meleagers-will" epub:type="se:short-story">
+			<h2 epub:type="title">The Fascinating Problem of Uncle Meleager’s Will</h2>
 			<p>“You look a little worried, Bunter,” said his lordship kindly to his manservant. “Is there anything I can do?”</p>
 			<p>The valet’s face brightened as he released his employer’s grey trousers from the press.</p>
 			<p>“Perhaps your lordship could be so good as to think,” he said hopefully, “of a word in seven letters with S in the middle, meaning two.”</p>
@@ -15,7 +15,7 @@
 			<p>“I beg your lordship’s pardon. T-w-o. And seven letters.”</p>
 			<p>“Nonsense!” said Lord Peter. “How about that bath?”</p>
 			<p>“It should be just about ready, my lord.”</p>
-			<p>Lord Peter Wimsey swung his mauve silk legs lightly over the edge of the bed and stretched appreciatively. It was a beautiful June that year. Through the open door he saw the delicate coils of steam wreathing across a shaft of yellow sunlight. Every step he took into the bathroom was a conscious act of enjoyment. In a husky light tenor he carolled a few bars of “<i epub:type="se:name.music.song" xml:lang="fr">Maman, dîtes-moi</i>.” Then a thought struck him, and he turned back.</p>
+			<p>Lord Peter Wimsey swung his mauve silk legs lightly over the edge of the bed and stretched appreciatively. It was a beautiful June that year. Through the open door he saw the delicate coils of steam wreathing across a shaft of yellow sunlight. Every step he took into the bathroom was a conscious act of enjoyment. In a husky light tenor he carolled a few bars of “<span epub:type="se:name.music.song"><i xml:lang="fr">Maman, dîtes-moi</i></span>.” Then a thought struck him, and he turned back.</p>
 			<p>“Bunter!”</p>
 			<p>“My lord?”</p>
 			<p>“No bacon this morning. Quite the wrong smell.”</p>
@@ -75,7 +75,7 @@
 			<blockquote epub:type="z3998:letter">
 				<p><span epub:type="z3998:salutation">My dear Hannah</span>⁠—When I die⁠—which I propose to do at my own convenience and not at that of my family⁠—you will at last discover my monetary worth. It is, of course, considerably less than you had hoped, and quite fails, I assure you, adequately to represent my actual worth in the eyes of the discerning. I made my will yesterday, leaving the entire sum, such as it is, to the Primrose League⁠—a body quite as fatuous as any other in our preposterous state, but which has the advantage of being peculiarly obnoxious to yourself. This will will be found in the safe in the library.</p>
 				<p>I am not, however, unmindful of the fact that your mother is my sister, and you and she my only surviving relatives. I shall accordingly amuse myself by drawing up today a second will, superseding the other and leaving the money to you.</p>
-				<p>“I have always held that woman is a frivolous animal. A woman who pretends to be serious is wasting her time and spoiling her appearance. I consider that you have wasted your time to a really shocking extent. Accordingly, I intend to conceal this will, and that in such a manner that you will certainly never find it unless by the exercise of a sustained frivolity.</p>
+				<p>I have always held that woman is a frivolous animal. A woman who pretends to be serious is wasting her time and spoiling her appearance. I consider that you have wasted your time to a really shocking extent. Accordingly, I intend to conceal this will, and that in such a manner that you will certainly never find it unless by the exercise of a sustained frivolity.</p>
 				<p>I hope you will contrive to be frivolous enough to become the heiress of your affectionate</p>
 				<footer>
 					<p epub:type="z3998:sender z3998:signature">Uncle Meleager.</p>
@@ -156,7 +156,7 @@
 					<span>She took off her clothes and fell into the water”</span>
 				</p>
 			</blockquote>
-			<p>she proclaimed.</p>
+			<p class="continued">she proclaimed.</p>
 			<p>“Well, I couldn’t take my clothes off with you here, could I?” grumbled Lord Peter. “We’ll have to fish out the papers. I’m afraid they’ve got a bit damp.”</p>
 			<p>Miss Marryat turned on the lights, and they started to clear the basin.</p>
 			<p>“Truth, poor girl⁠—” began Lord Peter, and suddenly, with a little shriek, began to dance on the marble edge of the impluvium.</p>
@@ -169,7 +169,7 @@
 			<p>Lord Peter snatched them out hurriedly.</p>
 			<p>“It’s all right, they haven’t run,” he said. “Oh, <em>darling</em> Uncle Meleager. Can you drain the impluvium, Miss Maryat, and find a bit of charcoal. Then I’ll get some dry clothes on and we’ll get down to it. Don’t you see? <em>There’s</em> your missing crossword square⁠—on the floor of the impluvium!”</p>
 			<figure id="illustration-1">
-				<img alt="copy from svg" src="../images/illustration-1.svg" epub:type="z3998:illustration"/>
+				<img alt="A crossword puzzle grid with rows numbered with Arabic numerals and columns numbered with Roman numerals. Most cells are black or white, but some additional reddish cells create a square pattern mid-way to the center of the puzzle." src="../images/illustration-1.svg" epub:type="z3998:illustration"/>
 			</figure>
 			<p>It took, however, some time to get the basin emptied, and it was not till next morning that the party, armed with sticks of charcoal, squatted down in the empty impluvium to fill in Uncle Meleager’s crossword on the marble tiles. Their first difficulty was to decide whether the red squares counted as stops or had to be filled in, but, after a few definitions had been solved, the construction of the puzzle grew apace. The investigators grew steadily hotter and more thickly covered with charcoal, while the attentive <abbr>Mr.</abbr> Bunter hurried to and fro between the atrium and the library, and the dictionaries piled up on the edge of the impluvium.</p>
 			<div>
@@ -701,7 +701,13 @@
 							<p><span epub:type="z3998:roman">XI</span>.15.</p>
 						</td>
 						<td>
-							<blockquote epub:type="z3998:verse"><p>Smooth and elastic and, I guess.</p> The dearest treasure you possess.</blockquote>
+							<blockquote epub:type="z3998:verse">
+								<p>
+									<span>Smooth and elastic and, I guess.</span>
+									<br/>
+									<span>The dearest treasure you possess.</span>
+								</p>
+							</blockquote>
 						</td>
 					</tr>
 					<!-- row end -->
@@ -1142,7 +1148,7 @@
 						<td>
 							<blockquote epub:type="z3998:verse">
 								<p>
-									<span>Ye gods!, think also of that goddess’ name</span>
+									<span>Ye gods! think also of that goddess’ name</span>
 									<br/>
 									<span>Whose might two hours on end the mob proclaim.</span>
 								</p>
