--- a/src/epub/text/the-piscatorial-farce-of-the-stolen-stomach.xhtml
+++ b/src/epub/text/the-piscatorial-farce-of-the-stolen-stomach.xhtml
@@ -6,8 +6,8 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2 epub:type="title">The Piscatorial Farce of the Stolen Stomach</h2>
 		<article id="the-piscatorial-farce-of-the-stolen-stomach" epub:type="se:short-story">
+			<h2 epub:type="title">The Piscatorial Farce of the Stolen Stomach</h2>
 			<p>“What in the world,” said Lord Peter Wimsey, “is that?”</p>
 			<p>Thomas Macpherson disengaged the tall jar from its final swathings of paper and straw and set it tenderly upright beside the coffeepot.</p>
 			<p>“That,” he said, “is Great-Uncle Joseph’s legacy.”</p>
@@ -24,7 +24,7 @@
 			<p>“He used to be in business⁠—something to do with shipbuilding, I believe, but he retired long ago. He was what the papers call a recluse. Lived all by himself in a little top flat in Glasgow, and saw nobody. Used to go off by himself for days at a time, nobody knew where or why. I used to look him up about once a year and take him a bottle of whisky.”</p>
 			<p>“Had he any money?”</p>
 			<p>“Nobody knew. He ought to have had⁠—he was a rich man when he retired. But, when we came to look into it, it turned out he only had a balance of about five hundred pounds in the Glasgow Bank. Apparently he drew out almost everything he had about twenty years ago. There were one or two big bank failures round about that time, and they thought he must have got the wind up. But what he did with it, goodness only knows.”</p>
-			<p>“Kept it in an old stocking, I expect”</p>
+			<p>“Kept it in an old stocking, I expect.”</p>
 			<p>“I should think Cousin Robert devoutly hopes so.”</p>
 			<p>“Cousin Robert?”</p>
 			<p>“He’s the residuary legatee. Distant connection of mine, and the only remaining Ferguson. He was awfully wild when he found he’d only got five hundred. He’s rather a bright lad, is Robert, and a few thousands would have come in handy.”</p>
@@ -105,7 +105,7 @@
 			<p>“Time enough to think of the diamonds when I’ve found the lady.”</p>
 			<p><abbr>Mr.</abbr> Abrahams threw up his hands.</p>
 			<p>“Oh, yes! And then everything will be done in a hurry! ‘Quick, <abbr>Mr.</abbr> Abrahams! I have fallen in love yesterday and I am being married tomorrow.’ But it may take months⁠—years⁠—to find and match perfect stones. It can’t be done between today and tomorrow. Your bride will be married in something ready-made from the jeweller’s.”</p>
-			<p>If three days are enough to choose a wife,” said Wimsey, laughing, “one day should surely be enough for a necklace.”</p>
+			<p>“If three days are enough to choose a wife,” said Wimsey, laughing, “one day should surely be enough for a necklace.”</p>
 			<p>“That is the way with Christians,” replied the diamond-merchant resignedly. “You are so casual. You do not think of the future. Three days to choose a wife! No wonder the divorce-courts are busy. My son Moses is being married next week. It has been arranged in the family these ten years. Rachel Goldstein, it is. A good girl, and her father is in a very good position. We are all very pleased, I can tell you. Moses is a good son, a very good son, and I am taking him into partnership.”</p>
 			<p>“I congratulate you,” said Wimsey heartily. “I hope they will be very happy.”</p>
 			<p>“Thank you, Lord Peter. They will be happy, I am sure. Rachel is a sweet girl and very fond of children. And she is pretty, too. Prettiness is not everything, but it is an advantage for a young man in these days. It is easier for him to behave well to a pretty wife.”</p>
@@ -151,10 +151,10 @@
 			<p>Wimsey committed himself to a brief comment in language usually confined to the soldiery. Robert had undoubtedly got Great-Uncle Joseph, and, even if they could trace the burglary to him, the legacy was by this time gone forever. He had never felt so furiously helpless. He even cursed the Catullus, which had kept him from going north and dealing with the matter personally.</p>
 			<p>While he was meditating what to do, a second telegram was brought in. It ran:</p>
 			<blockquote epub:type="z3998:letter">
-				<p>Greatuncle’s bottle found broken in fleet dropped by burglar in flight contents gone what next.”</p>
+				<p>“Greatuncle’s bottle found broken in fleet dropped by burglar in flight contents gone what next.”</p>
 			</blockquote>
 			<p>Wimsey pondered this.</p>
-			<p>Of course,” he said. “If the thief simply emptied the bottle and put Great-Uncle in his pocket, we’re done. Or if he’s simply emptied Great-Uncle and put the contents in his pocket, we’re done. But ‘dropped in flight’ sounds rather as though Great-Uncle had gone overboard lock, stock, and barrel. Why can’t the fool of a Scotsman put a few more details into his wires? It’d only cost him a penny or two. I suppose I’d better go up myself. Meanwhile a little healthy occupation won’t hurt him.”</p>
+			<p>“Of course,” he said. “If the thief simply emptied the bottle and put Great-Uncle in his pocket, we’re done. Or if he’s simply emptied Great-Uncle and put the contents in his pocket, we’re done. But ‘dropped in flight’ sounds rather as though Great-Uncle had gone overboard lock, stock, and barrel. Why can’t the fool of a Scotsman put a few more details into his wires? It’d only cost him a penny or two. I suppose I’d better go up myself. Meanwhile a little healthy occupation won’t hurt him.”</p>
 			<p>He took a telegraph form from the desk and despatched a further message:</p>
 			<blockquote epub:type="z3998:letter">
 				<p>“Was greatuncle in bottle when dropped if so drag river if not pursue burglar probably Robert Ferguson spare no pains starting for Scotland tonight hope arrive early tomorrow urgent important put your back into it will explain.”</p>
@@ -164,11 +164,11 @@
 			<p>“Come awa’ in, sir. All’s ready for ye, and <abbr>Mr.</abbr> Macpherson will be back in a few minutes, I’m thinkin’. Ye’ll be tired with your long journey, and hungry, maybe? Aye. Will ye tak’ a bit parritch to your eggs and bacon? There’s nae troot the day, though yesterday was a gran’ day for the fush. <abbr>Mr.</abbr> Macpherson has been up and doun, up and doun the river wi’ my Jock, lookin’ for ane of his specimens, as he ca’s them, that was dropped by the thief that cam’ in. I dinna ken what the thing may be⁠—my Jock says it’s like a calf’s pluck to look at, by what <abbr>Mr.</abbr> Macpherson tells him.”</p>
 			<p>“Dear me!” said Wimsey. “And how did the burglary happen, Maggie?”</p>
 			<p>“Indeed, sir, it was a vera’ remarkable circumstance. <abbr>Mr.</abbr> Macpherson was awa’ all day Monday and Tuesday, up at the big loch by the viaduct, fishin’. There was a big rain Saturday and Sunday, ye may remember, and <abbr>Mr.</abbr> Macpherson says, ‘There’ll be grand fishin’ the morn, Jock,’ says he. ‘We’ll go up to the viaduct if it stops rainin’ and we’ll spend the nicht at the keeper’s lodge.’ So on Monday it stoppit rainin’ and was a grand warm, soft day, so aff they went together. There was a telegram come for him Tuesday mornin’, and I set it up on the mantelpiece, where he’d see it when he cam’ in, but it’s been in my mind since that maybe that telegram had something to do wi’ the burglary.”</p>
-			<p>“I wouldn’t say but you might be right, Maggie, replied Wimsey gravely.</p>
+			<p>“I wouldn’t say but you might be right, Maggie,” replied Wimsey gravely.</p>
 			<p>“Aye, sir, that wadna surprise me.” Maggie set down a generous dish of eggs and bacon before the guest and took up her tale again.</p>
 			<p>“Well, I was sittin’ in my kitchen the Tuesday night, waitin’ for <abbr>Mr.</abbr> Macpherson and Jock to come hame, and sair I pitied them, the puir souls, for the rain was peltin’ down again, and the nicht wes sae dark I was afraid they micht ha’ tummelt into a bog-pool. Weel, I was listenin’ for the sound o’ the door-sneck when I heard something movin’ in the front room. The door wasna lockit, ye ken, because <abbr>Mr.</abbr> Macpherson was expectit back. So I up from my chair and I thocht they had mebbe came in and I not heard them. I waited a meenute to set the kettle on the fire, and then I heard a crackin’ sound. So I cam’ out and I called, ‘Is’t you, <abbr>Mr.</abbr> Macpherson?’ And there was nae answer, only anither big crackin’ noise, so I ran forrit, and a man cam’ quickly oot o’ the front room, brushin’ past me an’ puttin’ me aside wi’ his hand, so, and oot o’ the front door like a flash o’ lightin’. So, wi’ that, I let oot a skelloch, an’ Jock’s voice answered me fra’ the gairden gate. ‘Och!’ I says, ‘Jock! here’s a burrglar been i’ the hoose!’ An’ I heered him runnin’ across the gairden, doun tae the river, tramplin’ doun a’ the young kail and the stra’berry beds, the blackguard!”</p>
 			<p>Wimsey expressed his sympathy.</p>
-			<p>Aye, that was a bad business. An’ the next thing, there was <abbr>Mr.</abbr> Macpherson and Jock helter-skelter after him. If Davie Murray’s cattle had brokken in, they couldna ha’ done mair deevastation. An’ then there was a big splashin’ an’ crashin, an’ after a bit, back comes <abbr>Mr.</abbr> Macpherson an’ he says, ‘He’s jumpit intil the Fleet,’ he says, ‘an’ he’s awa’. What has he taken?’ he says. ‘I dinna ken,’ says I, ‘for it all happened sae quickly I couldna see onything.’ ‘Come awa ben says he, ‘an’ we’ll see what’s missin’.’ So we lookit high and low, an’ all we could find was the cupboard door in the front room broken open, and naething taken but this bottle wi’ the specimen.”</p>
+			<p>“Aye, that was a bad business. An’ the next thing, there was <abbr>Mr.</abbr> Macpherson and Jock helter-skelter after him. If Davie Murray’s cattle had brokken in, they couldna ha’ done mair deevastation. An’ then there was a big splashin’ an’ crashin, an’ after a bit, back comes <abbr>Mr.</abbr> Macpherson an’ he says, ‘He’s jumpit intil the Fleet,’ he says, ‘an’ he’s awa’. What has he taken?’ he says. ‘I dinna ken,’ says I, ‘for it all happened sae quickly I couldna see onything.’ ‘Come awa ben,’ says he, ‘an’ we’ll see what’s missin’.’ So we lookit high and low, an’ all we could find was the cupboard door in the front room broken open, and naething taken but this bottle wi’ the specimen.”</p>
 			<p>“Aha!” said Wimsey.</p>
 			<p>“Ah! an’ they baith went oot togither wi’ lichts, but naething could they see of the thief. Sae <abbr>Mr.</abbr> Macpherson comes bak, and ‘I’m gaun to ma bed,’ says he, ‘for I’m that tired I can dae nae mair the nicht,’ says he. ‘Oh!’ I said ‘I daurna gae tae bed; I’m frichtened.’ An’ Jock said, ‘Hoots, wumman, dinna fash yersel’. There’ll be nae mair burglars the nicht, wi’ the fricht we’ve gied ’em.’ So we lockit up a’ the doors an’ windies an’ gaed to oor beds, but I couldna sleep a wink.”</p>
 			<p>“Very natural,” said Wimsey.</p>
@@ -201,8 +201,8 @@
 			<p>“It is. How’s sport?”</p>
 			<p>Macpherson came up the stairs four steps at a time, and met Wimsey on the landing as he emerged from the bedroom.</p>
 			<p>“I say, d’you know who that is? It’s Robert.”</p>
-			<p>I know. I saw him in town. Never mind him. Have you found Great-Uncle?”</p>
-			<p>No, we haven’t. What’s all this mystery about? And what’s Robert doing here? What did you mean by saying he was the burglar? And why is Great-Uncle Joseph so important?”</p>
+			<p>“I know. I saw him in town. Never mind him. Have you found Great-Uncle?”</p>
+			<p>“No, we haven’t. What’s all this mystery about? And what’s Robert doing here? What did you mean by saying he was the burglar? And why is Great-Uncle Joseph so important?”</p>
 			<p>“One thing at a time. Let’s find the old boy first. What have you been doing?”</p>
 			<p>“Well, when I got your extraordinary messages I thought, of course, you were off your rocker.” (Wimsey groaned with impatience.) “But then I considered what a funny thing it was that somebody should have thought Great-Uncle worth stealing, and thought there might be some sense in what you said, after all.” (“Dashed good of you,” said Wimsey.) “So I went out and poked about a bit, you know. Not that I think there’s the faintest chance of finding anything, with the river coming down like this. Well, I hadn’t got very far⁠—by the way, I took Jock with me. I’m sure he thinks I’m mad, too. Not that he says anything; these people here never commit themselves⁠—”</p>
 			<p>“Confound Jock! Get on with it.”</p>
@@ -221,11 +221,11 @@
 			<p>Macpherson, to whom the prospect of searching the stream in detail appeared rather a dreary one, brightened a little at this.</p>
 			<p>“That’s a good idea. If we take the car down to just above Gatehouse, we’ve only got two fields to cross.”</p>
 			<p>The car was still at the door; the hired driver was enjoying the hospitality of the cottage. They pried him loose from Maggie’s scones and slipped down the road to Gatehouse.</p>
-			<p>Those gulls seem rather active about something,” said Wimsey, as they crossed the second field. The white wings swooped backwards and forwards in narrowing circles over the yellow shoal. Raucous cries rose on the wind. Wimsey pointed silently with his hand. A long, unseemly object, like a drab purse, lay on the shore. The gulls, indignant, rose higher, squawking at the intruders. Wimsey ran forward, stooped, rose again with the long bag dangling from his fingers.</p>
-			<p>Great-Uncle Joseph, I presume,” he said, and raised his hat with old-fashioned courtesy.</p>
+			<p>“Those gulls seem rather active about something,” said Wimsey, as they crossed the second field. The white wings swooped backwards and forwards in narrowing circles over the yellow shoal. Raucous cries rose on the wind. Wimsey pointed silently with his hand. A long, unseemly object, like a drab purse, lay on the shore. The gulls, indignant, rose higher, squawking at the intruders. Wimsey ran forward, stooped, rose again with the long bag dangling from his fingers.</p>
+			<p>“Great-Uncle Joseph, I presume,” he said, and raised his hat with old-fashioned courtesy.</p>
 			<p>“The gulls have had a wee peck at it here and there,” said Jock. “It’ll be tough for them. Aye. They havena done so vera much with it.”</p>
 			<p>“Aren’t you going to open it?” said Macpherson impatiently.</p>
-			<p>Not here, said Wimsey. “We might lose something.” He dropped it into Jock’s creel. “We’ll take it home first and show it to Robert.”</p>
+			<p>“Not here,” said Wimsey. “We might lose something.” He dropped it into Jock’s creel. “We’ll take it home first and show it to Robert.”</p>
 			<p>Robert greeted them with ill-disguised irritation.</p>
 			<p>“We’ve been fishing,” said Wimsey cheerfully. “Look at our bonny wee fush.” He weighed the catch in his hand. “What’s inside this wee fush, <abbr>Mr.</abbr> Ferguson?”</p>
 			<p>“I haven’t the faintest idea,” said Robert.</p>
@@ -236,7 +236,7 @@
 			<p>“Gude be gracious to us!” cried Maggie, peering over his shoulder. “What’ll that be?”</p>
 			<p>Wimsey inserted a delicate finger and thumb into the cavities of Uncle Joseph. “One⁠—two⁠—three⁠—” The stones glittered like fire as he laid them on the table. “Seven⁠—eight⁠—nine. That seems to be all. Try a little further down, Mac.”</p>
 			<p>Speechless with astonishment, <abbr>Mr.</abbr> Macpherson dissected his legacy.</p>
-			<p>‘Ten⁠—eleven,” said Wimsey. “I’m afraid the seagulls have got number twelve. I’m sorry, Mac.”</p>
+			<p>“Ten⁠—eleven,” said Wimsey. “I’m afraid the seagulls have got number twelve. I’m sorry, Mac.”</p>
 			<p>“But how did they get there?” demanded Robert foolishly.</p>
 			<p>“Simple as shelling peas. Great-Uncle Joseph makes his will, swallows his diamonds⁠—”</p>
 			<p>“He must ha’ been a grand man for a pill,” said Maggie, with respect.</p>
