--- a/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
+++ b/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
@@ -6,8 +6,8 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2 epub:type="title">The Unsolved Puzzle of the Man with No Face</h2>
 		<article id="the-unsolved-puzzle-of-the-man-with-no-face" epub:type="se:short-story">
+			<h2 epub:type="title">The Unsolved Puzzle of the Man with No Face</h2>
 			<p>“And what would <em>you</em> say, sir,” said the stout man, “to this here business of the bloke what’s been found down on the beach at East Felpham?”</p>
 			<p>The rush of travellers after the Bank Holiday had caused an overflow of third-class passengers into the firsts, and the stout man was anxious to seem at ease in his surroundings. The youngish gentleman whom he addressed had obviously paid full fare for a seclusion which he was fated to forgo. He took the matter amiably enough, however, and replied in a courteous tone:</p>
 			<p>“I’m afraid I haven’t read more than the headlines. Murdered, I suppose, wasn’t he?”</p>
@@ -111,7 +111,7 @@
 			<p>A youngish gentleman in a grey suit who emerged at that moment from the Criterion Bar appeared to think so too, for he exchanged a copper for the <i epub:type="se:name.publication.newspaper">Evening Views</i>, and at once plunged into its perusal with such concentrated interest that he bumped into a hurried man outside the station and had to apologise.</p>
 			<p>The <i epub:type="se:name.publication.newspaper">Evening Views</i>, grateful to murderer and victim alike for providing so useful a sensation in the dead days after the Bank Holiday, had torn <abbr>Messrs.</abbr> Negretti &amp; Zambra’s rocketing thermometrical statistics from the “banner” position which they had occupied in the lunch edition, and substituted:</p>
 			<blockquote>
-				<p>“Faceless Victim of Beach Outrage Identified</p>
+				<p>Faceless Victim of Beach Outrage Identified</p>
 				<p>⸻</p>
 				<p>Murder of Prominent<br/>
 				Publicity Artist</p>
@@ -174,7 +174,7 @@
 			<p>“How the devil can I say if it’s a striking likeness of a bloke I’ve never seen?”</p>
 			<p>“I’ll say it’s that, in any case. But I want to know if it’s well painted.”</p>
 			<p>“Curse it, Sally, what’s it matter whether it is or not? I’ve got other things to do. Who’s the artist, by the way? Anybody one’s ever heard of?”</p>
-			<p>Dunno. I’ve got the name here somewhere.” Sally rooted in his hip-pocket and produced a mass of dirty correspondence, its angles blunted by constant attrition. Some comic name like Buggle or Snagtooth⁠—wait a bit⁠—here it is. Crowder. Thomas Crowder. I knew it was something out of the way.”</p>
+			<p>“Dunno. I’ve got the name here somewhere.” Sally rooted in his hip-pocket and produced a mass of dirty correspondence, its angles blunted by constant attrition. “Some comic name like Buggle or Snagtooth⁠—wait a bit⁠—here it is. Crowder. Thomas Crowder. I knew it was something out of the way.”</p>
 			<p>“Singularly like Buggle or Snagtooth. All right, Sally. I’ll make a martyr of myself. Lead me to it.”</p>
 			<p>“We’ll have another quick one. Here’s Warren. This is Lord Peter Wimsey. This is on me.”</p>
 			<p>“On me,” corrected the photographer, a jaded young man with a disillusioned manner. “Three large White Labels, please. Well, here’s all the best. Are you fit, Sally? Because we’d better make tracks. I’ve got to be up at Golders Green by two for the funeral.”</p>
@@ -191,7 +191,7 @@
 			<p>“So that’s what he was like, was he?”</p>
 			<p>He pulled out the photograph of Plant from his pocket, and compared it with the portrait. The portrait seemed to sneer at his surprise.</p>
 			<p>“Of course, they touch these things up at these fashionable photographers,” he said. “Anyway, that’s not my business. This thing will make a jolly good eye-catcher, don’t you think so, Wimsey? Wonder if they’d give us a two-column spread on the front page? Well, Warren, you’d better get down to it.”</p>
-			<p>The photographer, bleakly unmoved by artistic or journalistic considerations, took silent charge of the canvas, mentally resolving it into a question of pan-chromatic plates and coloured screens. Crowder gave him a hand in shifting the easel into a better light. Two or three people from other departments, passing through the studio on their lawful occasions, stopped, and lingered in the neighbourhood of the disturbance, as though it were a street accident. A melancholy, grey-haired man, temporary head of the studio, vice Coreggio Plant, deceased, took Crowder aside, with a muttered apology, to give him some instructions about adapting a whole quad to an eleven-inch treble. Hardy turned to Lord Peter</p>
+			<p>The photographer, bleakly unmoved by artistic or journalistic considerations, took silent charge of the canvas, mentally resolving it into a question of pan-chromatic plates and coloured screens. Crowder gave him a hand in shifting the easel into a better light. Two or three people from other departments, passing through the studio on their lawful occasions, stopped, and lingered in the neighbourhood of the disturbance, as though it were a street accident. A melancholy, grey-haired man, temporary head of the studio, vice Coreggio Plant, deceased, took Crowder aside, with a muttered apology, to give him some instructions about adapting a whole quad to an eleven-inch treble. Hardy turned to Lord Peter.</p>
 			<p>“It’s damned ugly,” he said. “Is it good?”</p>
 			<p>“Brilliant,” said Wimsey. “You can go all out. Say what you like about it.”</p>
 			<p>“Oh, splendid! Could we discover one of our neglected British masters?”</p>
@@ -199,10 +199,10 @@
 			<p>“But, I say⁠—do you think it’s a good likeness? He’s made him look a most sinister sort of fellow. After all, Plant thought it was so bad he wouldn’t have it.”</p>
 			<p>“The more fool he. Ever heard of the portrait of a certain statesman that was so revealing of his inner emptiness that he hurriedly bought it up and hid it to prevent people like you from getting hold of it?”</p>
 			<p>Crowder came back.</p>
-			<p>“I say, said Wimsey, “whom does that picture belong to? You? Or the heirs of the deceased, or what?”</p>
+			<p>“I say,” said Wimsey, “whom does that picture belong to? You? Or the heirs of the deceased, or what?”</p>
 			<p>“I suppose it’s back on my hands,” said the painter. “Plant⁠—well, he more or less commissioned it, you see but⁠—”</p>
 			<p>“How more or less?”</p>
-			<p>Well, he kept on hinting, don’t you know, that he would like me to do him, and, as he was my boss, I thought I’d better. No price actually mentioned. When he saw it, he didn’t like it, and told me to alter it.”</p>
+			<p>“Well, he kept on hinting, don’t you know, that he would like me to do him, and, as he was my boss, I thought I’d better. No price actually mentioned. When he saw it, he didn’t like it, and told me to alter it.”</p>
 			<p>“But you didn’t.”</p>
 			<p>“Oh⁠—well, I put it aside and said I’d see what I could do with it. I thought he’d perhaps forget about it.”</p>
 			<p>“I see. Then presumably it’s yours to dispose of.”</p>
@@ -296,7 +296,7 @@
 			<p>“I saw that two years ago at a show in Manchester, and I happened to remember the name of the dealer who bought it.”</p>
 			<p>Inspector Winterbottom gaped at the panel.</p>
 			<p>“But that’s East Felpham!” he exclaimed.</p>
-			<p>“Yes. It’s only signed <abbr epub:type="z3998:personal-name">T.C.</abbr>, but the technique is rather unmistakable, don’t you think?”</p>
+			<p>“Yes. It’s only signed <abbr epub:type="z3998:personal-name">T. C.</abbr>, but the technique is rather unmistakable, don’t you think?”</p>
 			<p>The inspector knew little about technique, but initials he understood. He looked from the portrait to the panel and back at Lord Peter.</p>
 			<p>“The painter⁠—”</p>
 			<p>“Crowder?”</p>
@@ -306,7 +306,7 @@
 			<p>“Eh?”</p>
 			<p>“<i xml:lang="grc">κνμᾴτων ανήριθμον γέλασμα</i>⁠—quotation from the classics. Some people say it means the dimpled surface of the waves in the sunlight⁠—but how could Prometheus, bound upon his rock, have seen it? Surely it was the chuckle of the incoming tide among the stones that came up to his ears on the lonely peak where the vulture fretted at his heart. I remember arguing about it with old Philpotts in class, and getting rapped over the knuckles for contradicting him. I didn’t know at the time that he was engaged in producing a translation on his own account, or doubtless I should have contradicted him more rudely and been told to take my trousers down. Dear old Philpotts!”</p>
 			<p>“I don’t know anything about that,” said the inspector.</p>
-			<p>I beg your pardon. Shocking way I have of wandering. The painter⁠—well! he swam round the end of the rocks, for the tide was nearly in by that time; and, as he came up from the sea, he saw a man standing on the beach⁠—that beloved beach, remember, which he thought was his own sacred haven of peace. He came wading towards it, cursing the Bank Holiday rabble who must needs swarm about everywhere with their cigarette-packets and their kodaks and their gramophones⁠—and then he saw that it was a face he knew. He knew every hated line in it, on that clear sunny morning. And, early as it was, the heat was coming up over the sea like a haze.”</p>
+			<p>“I beg your pardon. Shocking way I have of wandering. The painter⁠—well! he swam round the end of the rocks, for the tide was nearly in by that time; and, as he came up from the sea, he saw a man standing on the beach⁠—that beloved beach, remember, which he thought was his own sacred haven of peace. He came wading towards it, cursing the Bank Holiday rabble who must needs swarm about everywhere with their cigarette-packets and their kodaks and their gramophones⁠—and then he saw that it was a face he knew. He knew every hated line in it, on that clear sunny morning. And, early as it was, the heat was coming up over the sea like a haze.”</p>
 			<p>“It was a hot weekend,” said the Inspector.</p>
 			<p>“And then the man hailed him, in his smug, mincing voice. ‘Hullo!’ he said, ‘you here? How did you find my little bathing-place?’ And that was too much for the painter. He felt as if his last sanctuary had been invaded. He leapt at the lean throat⁠—it’s rather a stringy one, you may notice, with a prominent Adam’s apple⁠—an irritating throat. The water chuckled round their feet as they swayed to and fro. He felt his thumbs sink into the flesh he had painted. He saw, and laughed to see, the hateful familiarity of the features change and swell into an unrecognisable purple. He watched the sunken eyes bulge out and the thin mouth distort itself as the blackened tongue thrust through it⁠—I am not unnerving you, I hope?”</p>
 			<p>The inspector laughed.</p>
