--- a/src/epub/text/the-vindictive-story-of-the-footsteps-that-ran.xhtml
+++ b/src/epub/text/the-vindictive-story-of-the-footsteps-that-ran.xhtml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>The Vindictive Story of the Footsteps that Ran</title>
+		<title>The Vindictive Story of the Footsteps That Ran</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2 epub:type="title">The Vindictive Story of the Footsteps that Ran</h2>
 		<article id="the-vindictive-story-of-the-footsteps-that-ran" epub:type="se:short-story">
+			<h2 epub:type="title">The Vindictive Story of the Footsteps That Ran</h2>
 			<p><abbr>Mr.</abbr> Bunter withdrew his head from beneath the focusing cloth.</p>
 			<p>“I fancy that will be quite adequate, sir,” he said deferentially, “unless there are any further patients, if I may call them so, which you would wish put on record.”</p>
 			<p>“Not today,” replied the doctor. He took the last stricken rat gently from the table, and replaced it in its cage with an air of satisfaction. “Perhaps on Wednesday, if Lord Peter can kindly spare your services once again⁠—”</p>
