--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -32,7 +32,7 @@
 					<a href="text/the-undignified-melodrama-of-the-bone-of-contention.xhtml">The Undignified Melodrama of the Bone of Contention</a>
 				</li>
 				<li>
-					<a href="text/the-vindictive-story-of-the-footsteps-that-ran.xhtml">The Vindictive Story of the Footsteps that Ran</a>
+					<a href="text/the-vindictive-story-of-the-footsteps-that-ran.xhtml">The Vindictive Story of the Footsteps That Ran</a>
 				</li>
 				<li>
 					<a href="text/the-bibulous-business-of-a-matter-of-taste.xhtml">The Bibulous Business of a Matter of Taste</a>
