--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -17,7 +17,7 @@
 					</li>
 					<li>
 						<p>
-							<a href="the-undignified-melodrama-of-the-bone-of-contention#illustration-2">A sketch map of the area near the parish church of Little Doddering. North is to the left, south to the right. At top left is Mortimer’s house and the village of Abbott's Bolton; middle left is the village of Frimpton. At the center bottom of the map is the village of Petering Friars. Little Doddering, with its old priory is at the right of the map, across the road from the War Memorial. Bridle paths connect Mortimer’s house to a barn and then to Dead Man’s Post, Little Doddering, Petering Friars and the road to Lympton.</a>
+							<a href="the-undignified-melodrama-of-the-bone-of-contention#illustration-2">A sketch map of the area near the parish church of Little Doddering. North is to the left, south to the right. At top left is Mortimer’s house and the village of Abbott’s Bolton; middle left is the village of Frimpton. At the center bottom of the map is the village of Petering Friars. Little Doddering, with its old priory is at the right of the map, across the road from the War Memorial. Bridle paths connect Mortimer’s house to a barn and then to Dead Man’s Post, Little Doddering, Petering Friars and the road to Lympton.</a>
 						</p>
 					</li>
 					<li>
