--- a/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
+++ b/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
@@ -6,8 +6,8 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2 epub:type="title">The Unprincipled Affair of the Practical Joker</h2>
 		<article id="the-unprincipled-affair-of-the-practical-joker" epub:type="se:short-story">
+			<h2 epub:type="title">The Unprincipled Affair of the Practical Joker</h2>
 			<p>The <i epub:type="se:name.vessel.ship">Zambesi</i>, they said, was expected to dock at six in the morning. <abbr>Mrs.</abbr> Ruyslaender booked a bedroom at the Magnifical, with despair in her heart. A bare nine hours and she would be greeting her husband. After that would begin the sickening period of waiting⁠—it might be days, it might be weeks, possibly even months⁠—for the inevitable discovery.</p>
 			<p>The reception-clerk twirled the register towards her. Mechanically, as she signed it, she glanced at the preceding entry:</p>
 			<blockquote>
@@ -97,7 +97,7 @@
 			<p>“Cautious blighter. All content? Righty-ho! Bring out your dead, partner. Oh, very pretty indeed. We’ll make it a slam this time. I’m rather glad to hear that expression of opinion from you, Colonel, because I particularly want you and Biggy to hang on this evening and take a hand with Melville and me.”</p>
 			<p>“What happens to me?” enquired the <abbr>Hon.</abbr> Freddy.</p>
 			<p>“You have an engagement to go home early, dear old thing. I’ve specially invited friend Melville to meet the redoubtable Colonel Marchbanks and our greatest criminal lawyer. Which hand am I supposed to be playin’-this from? Oh, yes. Come on, Colonel⁠—you’ve got to hike that old king out some time, why not now?”</p>
-			<p>“It’s a plot.” said <abbr>Mr.</abbr> Arbuthnot, with an exaggerated expression of mystery. “Carry on, don’t mind me.”</p>
+			<p>“It’s a plot,” said <abbr>Mr.</abbr> Arbuthnot, with an exaggerated expression of mystery. “Carry on, don’t mind me.”</p>
 			<p>“I take it you have your own reasons for cultivating the man,” said Sir Impey.</p>
 			<p>“The rest are mine, I fancy. Well, yes, I have. You and the Colonel would really do me a favour by letting Melville cut in tonight.”</p>
 			<p>“If you wish it,” growled the Colonel, “but I hope the impudent young beggar won’t presume on the acquaintance.”</p>
