[Editorial] Rationalised use of quote marks around blockquoted text
As I understand it, we only use quotation marks around blockquoted material if it is being spoken aloud. And in any case, the source scans are inconsistent in this matter.

--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -133,12 +133,12 @@
 			<p>“Not it. It’s different. I believe it’s our thing. Listen:</p>
 			<blockquote epub:type="z3998:verse">
 				<p>
-					<span>“Your expectation to be rich</span>
+					<span>“‘Your expectation to be rich</span>
 					<br/>
-					<span>Here will reach its highest pitch.</span>
+					<span>Here will reach its highest pitch.’</span>
 				</p>
 			</blockquote>
-			<p>That’s one for you, Miss Marryat. Mary, hunt about. We <em>must</em> find the square that belongs to this.”</p>
+			<p>“That’s one for you, Miss Marryat. Mary, hunt about. We <em>must</em> find the square that belongs to this.”</p>
 			<p>But, though they turned everything upside-down, they could find no square with Roman and Arabic numerals.</p>
 			<p>“Hang it all!” said Peter, “it must be made to fit one of these others. Look! I know what he’s done. He’s just taken a fifteen-letter square, and numbered it with Roman figures one way and Arabic the other. I bet it fits into that one it was pinned up with.”</p>
 			<p>But the one it was pinned up with turned out to have only thirteen squares.</p>
