--- a/src/epub/text/the-vindictive-story-of-the-footsteps-that-ran.xhtml
+++ b/src/epub/text/the-vindictive-story-of-the-footsteps-that-ran.xhtml
@@ -139,12 +139,12 @@
 			<p>“I thought as much,” said Lord Peter. “In the words of the song:</p>
 			<blockquote epub:type="z3998:song">
 				<p>
-					<span class="i1">“I thought as much,</span>
+					<span class="i1">“‘I thought as much,</span>
 					<br/>
-					<span>It was a little⁠—window-cleaner.</span>
+					<span>It was a little⁠—window-cleaner.’</span>
 				</p>
 			</blockquote>
-			<p>In that case,” he added, “it is absolutely imperative that Brotherton should not be left alone for a moment. Bunter! Confound it all, where’s that fellow got to?”</p>
+			<p>“In that case,” he added, “it is absolutely imperative that Brotherton should not be left alone for a moment. Bunter! Confound it all, where’s that fellow got to?”</p>
 			<p>The door into the bedroom opened.</p>
 			<p>“My lord?” <abbr>Mr.</abbr> Bunter unobtrusively appeared, as he had unobtrusively stolen out to keep an unobtrusive eye upon the patient.</p>
 			<p>“Good,” said Wimsey. “Stay where you are.” His lackadaisical manner had gone, and he looked at the doctor as four years previously he might have looked at a refractory subaltern.</p>
