--- a/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
+++ b/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
@@ -11,7 +11,7 @@
 			<p>The <i epub:type="se:name.vessel.ship">Zambesi</i>, they said, was expected to dock at six in the morning. <abbr>Mrs.</abbr> Ruyslaender booked a bedroom at the Magnifical, with despair in her heart. A bare nine hours and she would be greeting her husband. After that would begin the sickening period of waiting⁠—it might be days, it might be weeks, possibly even months⁠—for the inevitable discovery.</p>
 			<p>The reception-clerk twirled the register towards her. Mechanically, as she signed it, she glanced at the preceding entry:</p>
 			<blockquote>
-				<p>“Lord Peter Wimsey and valet⁠—London⁠—Suite 24.”</p>
+				<p>Lord Peter Wimsey and valet⁠—London⁠—Suite 24.</p>
 			</blockquote>
 			<p><abbr>Mrs.</abbr> Ruyslaender’s heart seemed to stop for a second. Was it possible that, even now, God had left a loophole? She expected little from Him⁠—all her life He had shown Himself a sufficiently stern creditor. It was fantastic to base the frailest hope on this signature of a man she had never even seen.</p>
 			<p>Yet the name remained in her mind while she dined in her own room. She dismissed her maid presently, and sat for a long time looking at her own haggard reflection in the mirror. Twice she rose and went to the door⁠—then turned back, calling herself a fool. The third time she turned the handle quickly and hurried down the corridor, without giving herself time to think.</p>
